# entity/request.go
@@ -1,5 +1,1 @@
 package entity
-
-type HelloRequest struct {
-	Name string `json:"name" binding:"required"`
-}
